Revamped whole website

--- a/contactus.html
+++ b/contactus.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/contactus.css">
     <title>Ultimate JToH Bot Official Website</title>
 </head>
 <body>
-    <h1>Ultimate JToH Bot</h1>
+    <h1>Contact Us</h1>
 
-    <div class="addtoserverbutton">
-        <a href="https://discord.com/api/oauth2/authorize?client_id=1040175217181470762&permissions=8&scope=applications.commands%20bot">Add To Your Server</a>
-    </div>
+    <p>Send us an email at: ultimatejtohbot@outlook.com</p>
 
     <div class="homebutton">
         <a href="index.html">Home</a>
